# flux

./: ANALYSIS_REPORT.md  Cargo.toml  README.md
docs/: ANIMATION_SYSTEM.md  ARCHITECTURE.md  FLOW_CONTROL.md  GRAPH_EVALUATION.md  LIST_OPERATIONS.md  OPERATOR_GUIDE.md  README.md  SERIALIZATION.md  SYMBOL_INSTANCE.md  TYPE_SYSTEM.md
docs/design/: flux-gpu-architecture.md  flux-gpu-poc-plan.md
docs/geometry/: README.md  implementation.md  operators.md  types.md
docs/research/: gpu-resource-pool-research.md
examples/: 01_basic_arithmetic.rs  02_sine_wave.rs  03_multi_input_sum.rs  04_compare_operator.rs  05_vec3_composition.rs  06_type_validation.rs  07_json_serialization.rs  08_composite_operators.rs  09_operator_registry.rs  10_animation_system.rs  10_color_wheel.rs  12_dirty_flag_system.rs  13_bypass_system.rs  14_eval_context.rs  14_symbol_instance.rs  15_playback_settings.rs  16_enhanced_serialization.rs  17_resource_management.rs  18_auto_conversion.rs  18_phase3_operators.rs  20_trigger_system.rs  21_compiled_execution.rs  22_undo_redo.rs  23_flow_control.rs  23_performance_benchmark.rs  24_procedural_terrain.rs  25_spring_physics.rs  26_state_machine.rs  27_diamond_dependency.rs  27_list_processing.rs  29_operator_showcase.rs  30_list_processing.rs  31_collection_types.rs  README.md
flux-core/: Cargo.toml
flux-core/src/: dirty_flag.rs  error.rs  id.rs  lib.rs  operator.rs  operator_meta.rs
flux-core/src/context/: call_context.rs  mod.rs  types.rs
flux-core/src/port/: constraint.rs  input.rs  mod.rs  output.rs  trigger.rs
flux-core/src/value/: color.rs  gradient.rs  matrix.rs  mod.rs  ops.rs
flux-graph/: Cargo.toml
flux-graph/src/: associated.rs  bypass.rs  compiler.rs  composite.rs  conversion.rs  graph.rs  instance_path.rs  lib.rs  slot_ref.rs  undo.rs
flux-graph/src/animation/: animator.rs  curve.rs  interpolation.rs  keyframe.rs  mod.rs
flux-graph/src/commands/: add_node.rs  connect.rs  disconnect.rs  macro_command.rs  mod.rs  remove_node.rs  set_default.rs
flux-graph/src/playback/: audio_clip.rs  mod.rs  types.rs
flux-graph/src/serialization/: animation.rs  error.rs  graph.rs  io.rs  library.rs  mod.rs  project.rs  symbol.rs  version.rs
flux-graph/src/symbol/: child.rs  core.rs  definition.rs  instance.rs  mod.rs  registry.rs
flux-macros/: Cargo.toml
flux-macros/src/: lib.rs
flux-operators/: Cargo.toml
flux-operators/src/: lib.rs  registry.rs
flux-operators/src/builtin/: arithmetic.rs  compare.rs  compose.rs  constant.rs  mod.rs  scope.rs  sum.rs  wave.rs
flux-operators/src/color/: color_ops.rs  mod.rs
flux-operators/src/flow/: context.rs  control.rs  mod.rs  state.rs
flux-operators/src/list/: color_list_ops.rs  conversions.rs  int_list_ops.rs  iterator.rs  list_ops.rs  mod.rs  vec3_list_ops.rs
flux-operators/src/logic/: boolean.rs  integer.rs  mod.rs
flux-operators/src/math/: arithmetic.rs  comparison.rs  interpolation.rs  mod.rs  random.rs  rounding.rs  trig.rs
flux-operators/src/string/: mod.rs  string_ops.rs
flux-operators/src/time/: clock.rs  mod.rs  oscillators.rs
flux-operators/src/util/: debug.rs  mod.rs
flux-operators/src/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/: lib.rs
