[package]
name = "flux-graph"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Graph execution and serialization for the Flux operator graph system"

[dependencies]
flux-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
flux-operators.workspace = true
